--- a/src/components/shared/BentoGrid.astro
+++ b/src/components/shared/BentoGrid.astro
@@ -107,7 +107,7 @@ const t = useTranslations(lang);
           <div class="@container flex flex-1 items-center max-lg:py-6 lg:pb-4">
             <div class="w-full px-8 pt-4 pb-10 sm:px-10 sm:pt-6">
               <img
-                src="/images/home-page/Validacion Cuartos Limpios.jpg"
+                src="/images/home-page/Filtros de Estrellas Cuarto Limpio.png"
                 alt="Validación de cuartos limpios Star Filters"
                 class="w-full h-full rounded-lg object-cover shadow-sm"
               />
