--- a/src/components/shared/BentoGrid.astro
+++ b/src/components/shared/BentoGrid.astro
@@ -36,13 +36,13 @@ const t = useTranslations(lang);
             </p>
           </div>
           <div
-            class="@container relative min-h-120 w-full grow max-lg:mx-auto max-lg:max-w-sm"
+            class="@container relative w-full grow max-lg:mx-auto max-lg:max-w-sm"
           >
             <div class="px-8 pt-4 pb-8 sm:px-10 sm:pt-6 sm:pb-10">
               <img
                 src="/images/home-page/Cuarto Limpio Sala Blanca.png"
                 alt="Cuarto limpio sala blanca ISO 14644 Star Filters"
-                class="w-full h-full rounded-lg object-cover shadow-sm"
+                class="w-full h-64 sm:h-72 lg:h-80 rounded-lg object-cover shadow-sm"
               />
             </div>
           </div>
@@ -77,7 +77,7 @@ const t = useTranslations(lang);
               <img
                 src="/images/home-page/Filtros de Aire Star.png"
                 alt="Filtros de aire industriales Star Filters"
-                class="w-full max-lg:max-w-xs rounded-lg object-cover shadow-sm"
+                class="w-full h-48 sm:h-56 lg:h-64 rounded-lg object-cover shadow-sm"
               />
           </div>
         </div>
@@ -109,7 +109,7 @@ const t = useTranslations(lang);
               <img
                 src="/images/home-page/Filtros de Estrellas Cuarto Limpio.png"
                 alt="Validación de cuartos limpios Star Filters"
-                class="w-full h-full rounded-lg object-cover shadow-sm"
+                class="w-full h-48 sm:h-56 lg:h-64 rounded-lg object-cover shadow-sm"
               />
             </div>
           </div>
@@ -140,12 +140,12 @@ const t = useTranslations(lang);
               {t('features.support.description')}
             </p>
           </div>
-          <div class="relative min-h-120 w-full grow">
+          <div class="relative w-full grow">
             <div class="px-8 pt-4 pb-8 sm:px-10 sm:pt-6 sm:pb-10">
               <img
                 src="/images/home-page/Filtros%20de%20estrella%20productos.png"
                 alt="Productos Star Filters para cuartos limpios"
-                class="w-full h-full rounded-lg object-cover shadow-sm"
+                class="w-full h-64 sm:h-72 lg:h-80 rounded-lg object-cover shadow-sm"
               />
             </div>
           </div>
