--- a/src/components/shared/Stats.astro
+++ b/src/components/shared/Stats.astro
@@ -11,7 +11,7 @@ const stats = [
 ];
 ---
 
-<div class="bg-background py-24 sm:py-32">
+<div class="bg-background pt-24 pb-12 sm:pt-32 sm:pb-16">
   <div class="mx-auto max-w-7xl px-6 lg:px-8">
     <dl class="grid grid-cols-1 gap-x-8 gap-y-16 text-center lg:grid-cols-3">
       {stats.map((stat) => (
