Ajustar separación entre HeroSection y Stats
- Agregar pb-24 sm:pb-32 al contenedor principal de HeroSection
- Esto crea separación uniforme igual a py-24 sm:py-32 de Stats
- Las separaciones ahora son iguales arriba y abajo de la sección de estadísticas

--- a/src/components/shared/HeroSection.astro
+++ b/src/components/shared/HeroSection.astro
@@ -6,7 +6,7 @@ const lang = getLangFromUrl(Astro.url);
 const t = useTranslations(lang);
 ---
 
-<div class="bg-background min-h-screen flex flex-col">
+<div class="bg-background min-h-screen flex flex-col pb-24 sm:pb-32">
   <Navbar />
 
   <div class="relative flex-1 flex">
